# autoDiff

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  traces.1
report/: autodiff.tex
src/: function.hh  function_factory.cc  function_factory.hh  main.cc
src/compositions/: add.hh  power.hh  product.hh  quotient.hh
src/hyper/: cosh.hh  coth.hh  hyper.hh  sinh.hh  tanh.hh
src/other/: exp.hh  log.hh  polynomial.hh
src/test/: test1.hh  test2.hh  test3.hh  test4.hh
src/trig/: cos.hh  cot.hh  sin.hh  tan.hh  trig.hh
test/: test1.in  test2.in  test3.in  test4.in
