AC_INIT([autodiff], [1.0])   dnl define the project name and its version
AM_INIT_AUTOMAKE            dnl initialize environment for automake (required)
AC_PROG_CXX                 dnl specify the type of source code (CXX means C++) 
AC_CONFIG_FILES([Makefile]) dnl the prefix of the template build files
AC_OUTPUT                   dnl the end of the file (required)
